--- a/app/src/main/res/layout/anagramma.xml
+++ b/app/src/main/res/layout/anagramma.xml
@@ -1,105 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/t2"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingRight="10dp">
 
-    <LinearLayout
-        android:layout_width="335dp"
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:alpha="0.75"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/an1" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:adjustViewBounds="true"
+        android:alpha="0.75"
+        app:layout_constraintBottom_toTopOf="@+id/textView13"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/an2" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:alpha="0.75"
+        android:background="@color/white"
+        android:gravity="center"
+        android:text="В легенде про Архимеда, какую вещь поручил проверить Гиерон II ученому?"
+        android:textColor="@android:color/background_dark"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="275dp"
-            android:layout_height="65dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:alpha="0.75"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            app:srcCompat="@drawable/an1" />
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:alpha="0.75"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:hint="Введите ответ"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/background_dark"
+        android:textColorHint="@android:color/background_dark"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="275dp"
-            android:layout_height="103dp"
-            android:layout_weight="1"
-            android:layout_marginLeft="30dp"
-            android:alpha="0.75"
-            app:srcCompat="@drawable/an2" />
+    <EditText
+        android:id="@+id/editText4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:alpha="0.75"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:hint="Введите ответ"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/background_dark"
+        android:textColorHint="@android:color/background_dark"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="274dp"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:alpha="0.75"
-            android:layout_marginLeft="30dp"
-            android:background="#FFFFFF"
-            android:gravity="center"
-            android:text="В легенде про Архимеда, какую вещь поручил проверить Гиерон II ученому?"
-            android:textColor="@android:color/background_dark" />
-    </LinearLayout>
+    <EditText
+        android:id="@+id/editText5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:alpha="0.75"
+        android:background="@color/white"
+        android:ems="10"
+        android:hint="Введите ответ"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/background_dark"
+        android:textColorHint="@android:color/background_dark"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/textView13"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView13" />
 
-    <LinearLayout
-        android:layout_width="276dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:onClick="Test"
+        android:text="Проверить"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="135dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:alpha="0.75"
-            android:background="#FFFFFF"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Введите ответ"
-            android:onClick="clear"
-            android:textColor="@android:color/background_dark"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="132dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="85dp"
-            android:alpha="0.75"
-            android:background="#FFFFFF"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:onClick="clear1"
-            android:text="Введите ответ"
-            android:textColor="@android:color/background_dark"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="136dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:alpha="0.75"
-            android:background="#FFFFFF"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:onClick="clear2"
-            android:text="Введите ответ"
-            android:textColor="@android:color/background_dark"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="134dp"
-            android:layout_height="wrap_content"
-            android:onClick="Test"
-            android:text="Проверить"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
