--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/t3"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="480dp"
-        android:layout_height="131dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginLeft="55dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="55dp"
+        android:layout_weight="1"
         android:alpha="0.75"
         android:background="#FFFFFF"
         android:gravity="center"
         android:text="Реши задачу:
 Мертвое море – соленое озеро между Израилем, Иорданией и Западным берегом реки Иордан. Берега озера находятся более чем на 400 м ниже уровня моря, что делает это место самым низким участком суши на планете. Вода Мертвого моря содержит огромное количество солей, поэтому в нем очень легко плавать. Рассчитай выталкивающую силу, которая действует на человека весом 70 кг. "
-        android:textColor="@android:color/background_dark" />
+        android:textColor="@android:color/background_dark"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="127dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="408dp"
         android:layout_marginTop="10dp"
         android:alpha="0.75"
         android:background="#FFFFFF"
         android:ems="10"
-        android:onClick="clear"
+        android:hint="Введите ответ"
         android:inputType="textPersonName"
-        android:text="Введите ответ"
+        android:onClick="clear"
         android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:textColorHint="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="134dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="405dp"
         android:onClick="Test"
         android:text="Проверить"
-        android:textSize="12sp" />
-</LinearLayout>
+        android:textSize="12sp"
+        app:layout_constraintRight_toRightOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+</android.support.constraint.ConstraintLayout>
