--- a/app/src/main/res/layout/experience_new.xml
+++ b/app/src/main/res/layout/experience_new.xml
@@ -9,18 +9,15 @@
 
     <ImageView
         android:id="@+id/barbell"
-        android:layout_width="140dp"
-        android:layout_height="330dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginLeft="77dp"
-        android:layout_marginBottom="2dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/start_size"
+        android:src="@drawable/start"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_marginLeftPercent="10%" />
+ />
 
     <ImageView
         android:id="@+id/cargo"
